{
  "@@locale": "zh",
  "taiyishenshu": "太乙神数",
  "noOfficialDeityLoaded": "未载入官方星神",
  "close": "关闭",
  "deleteDeity": "删除星神",
  "cancel": "取消",
  "delete": "删除",
  "saveSuccess": "保存成功",
  "copiedAsMyDeity": "已复制为我的星神：{name}",
  "@copiedAsMyDeity": {
    "placeholders": {
...
